# fsa-food-safety-mcp

./: .cursorrules  README.md  glama.json  llms.txt  pyproject.toml  server.json  server.py
.well-known/mcp/: server-card.json
